@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2020 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2020 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2023 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2023 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-tk-lib
  * Created on: 20 авг. 2020 г.
@@ -37,6 +37,8 @@ namespace lsp
         {
             LSP_TK_STYLE_DEF_BEGIN(GraphItem, Widget)
                 prop::Boolean       sSmooth;
+                prop::Integer       sPriorityGroup; // Priority group
+                prop::Integer       sPriority;      // Priority inside of a group
             LSP_TK_STYLE_DEF_END
         }
 
@@ -45,26 +47,31 @@ namespace lsp
             public:
                 static const w_class_t    metadata;
 
-            private:
-                GraphItem & operator = (const GraphItem &);
-                GraphItem(const GraphItem &);
-
             protected:
                 prop::Boolean       sSmooth;
+                prop::Integer       sPriorityGroup; // Priority group
+                prop::Integer       sPriority;      // Priority inside of a group
 
             protected:
-                virtual void            property_changed(Property *prop);
+                virtual void            property_changed(Property *prop) override;
 
             public:
                 explicit GraphItem(Display *dpy);
-                virtual ~GraphItem();
+                GraphItem(const GraphItem &) = delete;
+                GraphItem(GraphItem &&) = delete;
+                virtual ~GraphItem() override;
+
+                GraphItem & operator = (const GraphItem &) = delete;
+                GraphItem & operator = (GraphItem &&) = delete;
 
             public:
-                virtual status_t            init();
-                virtual void                destroy();
+                virtual status_t            init() override;
+                virtual void                destroy() override;
 
             public:
                 LSP_TK_PROPERTY(Boolean,        smooth,         &sSmooth);
+                LSP_TK_PROPERTY(Integer,        priority_group, &sPriorityGroup);
+                LSP_TK_PROPERTY(Integer,        priority,       &sPriority);
 
             public:
                 /**
@@ -73,7 +80,7 @@ namespace lsp
                  */
                 Graph              *graph();
 
-                virtual void        query_draw(size_t flags = REDRAW_SURFACE);
+                virtual void        query_draw(size_t flags = REDRAW_SURFACE) override;
 
                 /**
                  * Check whether mouse pointer is inside of the graph item
@@ -81,10 +88,19 @@ namespace lsp
                  * @param y vertical position of mouse pointer
                  * @return true if item is inside of the graph
                  */
-                virtual bool        inside(ssize_t x, ssize_t y);
+                virtual bool        inside(ssize_t x, ssize_t y) override;
+
+            public:
+                /**
+                 * Estimate the bounding box for prioritized drawing
+                 * @param s surface for drawing
+                 * @param r rectangle to store the bound box
+                 * @return false if widget does not provide bound box
+                 */
+                virtual bool        bound_box(ws::ISurface *s, ws::rectangle_t *r);
         };
 
-    }
-}
+    } /* namespace tk */
+} /* namespace lsp */
 
 #endif /* LSP_PLUG_IN_TK_WIDGETS_GRAPH_GRAPHITEM_H_ */
